--- a/project1/Sutherland-Landon-pr1/README
+++ b/project1/Sutherland-Landon-pr1/README
@@ -1,1 +1,51 @@
-Sutherland-Landon-pr1
+Sutherland-Landon-pr1 README
+
+Source Files
+---------------------------------------------------------------
+Client: webclient.c
+Server: webserver.c
+---------------------------------------------------------------
+
+Known Bugs
+---------------------------------------------------------------
+Client
+	Using make with webclient returns this error:
+	.../webclient.c:345: undefined reference to `pthread_create'
+	collect2: error: ld returned 1 exit status
+
+	now I have included the pthread.h but for some reason, it just isn't working
+	I use this command to compile webclient:
+	gcc webclient.c -o webclient -lpthread
+Server
+	Same story as client
+---------------------------------------------------------------
+
+Capabilities
+---------------------------------------------------------------
+Webclient
+	Fully functioning multi-threaded client
+	All command line flags work
+	Does NOT save metrics
+Webserver
+	Fully functioning single-threaded server
+	All command line flags work
+---------------------------------------------------------------
+
+Assumptions
+---------------------------------------------------------------
+Client
+	if workload < number of threads
+		some threads will be assigned the same file to get
+	if threads < requests
+		some threads will request its assigned file multiple times such that
+		each thread does ~requests/threads requests/threads, regardless of
+		how many times the same file is requested
+	if requests < threads
+		only enough threads will be created to handle the number
+		number of requests (i.e. (-t 5, -r 3) => 3 threads created, not 5)
+	if requests < workload
+		only enough files will be read to satisfy the number of
+		requests (i.e. (workload=4, -t 5, -r 2) => 2 threads created,
+		2 files requested from workload)
+---------------------------------------------------------------
+
